# py-qbot

./: .gitignore  config.json.example  pyproject.toml  qbot.sh  qbot.sh.example  readme.md
py_qbot/: __init__.py  cli.py  config.py  extra_argument.py  filebot.py  qbot.py
